--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://mava1412.github.io",
   "scripts": {
     "sass": "node-sass -w scss/ -o css/ --recursive",
-    "deploy": "gh-pages -d code_pen/"
+    "deploy": "gh-pages -d code_pen"
   },
   "author": "Mariano Vazquez",
   "license": "MIT",
